--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@tanstack/react-query": "^5.90.11",
-    "ai": "^5.0.106",
+    "@xyflow/react": "^12.10.0",
+    "ai": "^5.0.107",
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,6 +51,8 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
+    "nanoid": "^5.1.6",
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "prisma": "^6.17.1",
@@ -58,8 +62,12 @@
     "react-hook-form": "^7.67.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
+    "shiki": "^3.19.0",
     "sonner": "^2.0.7",
+    "streamdown": "^1.6.10",
     "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
